force-app/main/default/objects/custom_create319__c/custom_create319__c.object-meta.xml
<CustomObject>
    <label>Custom created object319</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects319</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>