force-app/main/default/objects/custom_create319__c/fields/custom_create_319field681__c.field-meta.xml
<CustomField>
    <fullName>custom_create_319field681__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 319field681</label>
    <type>Checkbox</type>
</CustomField>